--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "*",
     "connect-flash": "*",
     "cookie-parser": "^1.4.1",
+    "cool-ascii-faces": "1.3.4",
     "express": "*",
     "express-handlebars": "*",
     "express-messages": "*",
